--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
    <meta name="viewport" content="width=device-width">
    <title>⭐ Index ⭐</title>
    <meta name="author" content="Fatima Malik - 26097511">
-   <link rel="stylesheet" href="websystems.css">
+   <link rel="stylesheet" href="websystems.css?v=1.0">
 </head>
 
 <body>
@@ -53,7 +53,7 @@
   <div class="box">
     <h2>Other Interests</h2>
     <img src="images/musiccat.png" alt="cat with headphones" width="150" height="150" style="float: right;">
-    <p>I really mess with music. I have a very diverse music taste, with a whole lot of pop, rap, urdu and hindi music and indie. My current rotation includes The Marías, Saint Levant, Billie Eilish, Talha Anjum, Dominic Fike, Beabadoobee and a whole lot of others.</p>
+    <p>I really mess with music. I have a very diverse music taste, with a whole lot of pop, rap, urdu and hindi music and indie. My current rotation includes The Marías, Saint Levant, Billie Eilish, Dominic Fike, Beabadoobee and a whole lot of others.</p>
     <p> I also love love love watching series. Im currently binging the Rookie which I lowkey like. Other than that, my all time favs include Money Heist, Brooklyn 99, UCAD and so so many more (I can't remember right now) </p>
     </div>
 </div>
@@ -82,3 +82,4 @@
 </a>
 </footer>
 </html>
+
